--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,8 +1,9 @@
-@import "~bulma/sass/utilities/initial-variables";
-@import "~bulma/sass/utilities/functions";
-// 1. Set your own initial variables and derived 
+@import '~bulma/sass/utilities/initial-variables';
+@import '~bulma/sass/utilities/functions';
+@import '../../../node_modules/vue-image-lightbox/dist/vue-image-lightbox.min.css';
+// 1. Set your own initial variables and derived
 //    variables in _variables.scss
-@import "variables";
+@import 'variables';
 
 // 2. Setup your Custom Colors
 $linkedin: #0077b5;
@@ -12,17 +13,26 @@ $twitter-invert: findColorInvert($twitter);
 $github: #333;
 $github-invert: findColorInvert($github);
 
-@import "~bulma/sass/utilities/derived-variables";
+@import '~bulma/sass/utilities/derived-variables';
 
 // 3. Add new color variables to the color map.
 $addColors: (
-  "twitter":($twitter, $twitter-invert),
-  "linkedin": ($linkedin, $linkedin-invert),
-  "github": ($github, $github-invert)
+	'twitter': (
+		$twitter,
+		$twitter-invert
+	),
+	'linkedin': (
+		$linkedin,
+		$linkedin-invert
+	),
+	'github': (
+		$github,
+		$github-invert
+	)
 );
 $colors: map-merge($colors, $addColors);
 
-@import "~bulma";
-@import "~buefy/src/scss/buefy";
+@import '~bulma';
+@import '~buefy/src/scss/buefy';
 
 // 4. Provide custom buefy overrides and site styles here
